@@ -9,6 +9,7 @@ Version 1.0.14 (Build 2019112100)
 -display shortened transcript and word count on view submissions page
 -display view page link on view submissions page
 -Optimisations of cron task
+-Fixed styles on transcript container
 
 Version 1.0.13 (Build 2019091300)
 -Fixed issue where incorrect privacy function declaration broke plugin privacy registry on load
